discussion/kv_engine/174510/174510_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

[clone] MB-51681: Replace full CM scans with variables updated in-place

Instead of looping through every checkpoint owned
by the CheckpointManager and summing the individual
stats, create CM-level variables which are updated
in-place by Checkpoint MemoryCounters.

Change-Id: I3b60731994efe70e0f40019982774655c6bcec2f

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-05-05 13:03:31.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-05 13:08:42.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18221/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18221/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6895/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6895/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19383/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19383/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6987/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6987/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19041/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19041/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20067/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20067/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27441/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27441/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17285/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/hdrhistogram/hdrhistogram.h:29:10: error: "hdr_histogram.h" file not found [clang-diagnostic-error]
#include <hdr_histogram.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17285/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/hdrhistogram/hdrhistogram.h:29:10:
error: "hdr_histogram.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17285/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16278/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
